# audioflow

./: .gitignore  Makefile  README.md  environment.yml  example_files.txt  main.nf  nextflow.config
conf/: profiles.config
environments/: audio.yml
modules/audio/parseMetadata/: README.md  extract_metadata.py  main.nf  pyproject.toml
modules/audio/parseMetadata/templates/: get_metadata.sh
modules/extractFeatures/: README.md  main.nf  pyproject.toml
modules/local/: clean_files.nf  copyFiles.nf  copy_files.nf  extractFeatures.nf  extract_features.nf  extract_features_and_detections.nf  mergeParquet.nf  merge_csv.nf  merge_parquet.nf  parseMetadata.nf  parse_metadata.nf  process_file_list.nf  split_file.nf
modules/local/audio/: environment.yml  getAudioMothMetadata.nf
modules/local/audio/templates/: get_metadata.py
modules/mergeCsv/: main.nf
modules/mergeParquet/: README.md  main.nf  merge_parquet.py  pyproject.toml
modules/parseMetadata/: main.nf
modules/splitFile/: main.nf
workflows/: process_audio_files.nf
